--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,7 @@ dependencies = [
     "scikit-learn (>=1.8.0,<2.0.0)",
     "tqdm (>=4.67.1,<5.0.0)",
     "seaborn (>=0.13.2,<0.14.0)",
-    "scipy (>=1.16.3,<2.0.0)",
-    "torch (>=2.9.1,<3.0.0)",
-    "torchvision (>=0.24.1,<0.25.0)"
+    "scipy (>=1.16.3,<2.0.0)"
 ]
 
 
@@ -26,9 +24,6 @@ build-backend = "poetry.core.masonry.api"
 [dependency-groups]
 dev = [
     "jupyter (>=1.1.1,<2.0.0)",
-    "ipykernel (>=7.1.0,<8.0.0)",
-    "ruff (>=0.14.9,<0.15.0)",
-    "black (>=25.12.0,<26.0.0)",
-    "mypy (>=1.19.0,<2.0.0)"
+    "ipykernel (>=7.1.0,<8.0.0)"
 ]
 
