--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,17 @@ dependencies = [
     "scikit-learn (>=1.8.0,<2.0.0)",
     "tqdm (>=4.67.1,<5.0.0)",
     "seaborn (>=0.13.2,<0.14.0)",
-    "scipy (>=1.16.3,<2.0.0)"
+    "scipy (>=1.16.3,<2.0.0)",
+    "torch (>=2.9.1,<3.0.0)",
+    "torchvision (>=0.24.1,<0.25.0)"
 ]
+
+
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.poetry]
+package-mode = false
