--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Your Name",email = "you@example.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.11,<3.15"
+requires-python = ">=3.11,<3.12"
 dependencies = [
     "numpy (>=2.3.5,<3.0.0)",
     "matplotlib (>=3.10.8,<4.0.0)",
@@ -15,7 +15,10 @@ dependencies = [
     "seaborn (>=0.13.2,<0.14.0)",
     "scipy (>=1.16.3,<2.0.0)",
     "torch (>=2.9.1,<3.0.0)",
-    "torchvision (>=0.24.1,<0.25.0)"
+    "torchvision (>=0.24.1,<0.25.0)",
+    "ipykernel (>=7.1.0,<8.0.0)",
+    "joblib (>=1.5.3,<2.0.0)",
+    "tqdm-joblib (>=0.0.5,<0.0.6)"
 ]
 
 
